# pong-vibe-coded-rust-web-assembly

./: Cargo.toml  LICENSE  README.md
src/: ai.rs  ball.rs  collisions.rs  lib.rs  pad.rs  page.rs  point.rs  pong.rs  rect.rs  styling.rs
static/: index.html  style.css
