[package]
name = "rust-wasm-project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "MouseEvent", "CssStyleDeclaration"] }

[profile.release]
opt-level = "s"